--- a/X-admin/category.html
+++ b/X-admin/category.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/xadmin.css">
     <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
-    <script type="text/javascript" src="js/modules/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/swiper-3.4.2.jquery.min.js"></script>
     <script src="./lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/xadmin.js"></script>
-    <script type="text/javascript" src="js/require.js"></script>
+    <script type="text/javascript" src="js/modules/utils.js"></script>
+    <script type="text/javascript" src="js/modules/category.js"></script>
 </head>
 <body>
 <!-- 顶部开始 -->
@@ -200,175 +201,42 @@
     </div>
     <!-- 左侧菜单结束 -->
     <!-- 右侧主体开始 -->
-    <div class="page-content">
-        <div class="content">
-            <!-- 右侧内容框架，更改从这里开始 -->
-            <form class="layui-form xbs" action="">
-                <div class="layui-form-pane" style="text-align: center;">
-                    <div class="layui-form-item" style="display: inline-block;">
-                        <label class="layui-form-label xbs768">日期范围</label>
+    <xblock class="page-content">
+        <!-- 右侧内容框架，更改从这里开始 -->
+        <form class="layui-form xbs" action="">
+            <div class="layui-form-pane" style="text-align: center;">
+                <div class="layui-form-item" style="display: inline-block;">
+                    <label class="layui-form-label xbs768">日期范围</label>
 
-                        <div class="layui-input-inline xbs768">
-                            <input class="layui-input" placeholder="开始日" id="LAY_demorange_s">
-                        </div>
-                        <div class="layui-input-inline xbs768">
-                            <input class="layui-input" placeholder="截止日" id="LAY_demorange_e">
-                        </div>
-                        <div class="layui-input-inline">
-                            <input type="text" name="username" placeholder="请输入用户名" autocomplete="off"
-                                   class="layui-input">
-                        </div>
-                        <div class="layui-input-inline" style="width:80px">
-                            <button class="layui-btn" lay-submit="" lay-filter="sreach"><i
-                                    class="layui-icon">&#xe615;</i></button>
-                        </div>
+                    <div class="layui-input-inline xbs768">
+                        <input class="layui-input" placeholder="开始日" id="LAY_demorange_s">
+                    </div>
+                    <div class="layui-input-inline xbs768">
+                        <input class="layui-input" placeholder="截止日" id="LAY_demorange_e">
+                    </div>
+                    <div class="layui-input-inline">
+                        <input type="text" name="username" placeholder="请输入用户名" autocomplete="off"
+                               class="layui-input">
+                    </div>
+                    <div class="layui-input-inline" style="width:80px">
+                        <button class="layui-btn" lay-submit="" lay-filter="sreach"><i
+                                class="layui-icon">&#xe615;</i></button>
                     </div>
                 </div>
-            </form>
-            <xblock>
-                <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除
-                </button>
-                <button class="layui-btn" onclick="category_add('添加分类','category-add.html','600','500')"><i
-                        class="layui-icon">&#xe608;</i>添加
-                </button>
-                <span class="x-right" style="line-height:40px">共有数据：88 条</span></xblock>
-            <table class="layui-table">
-                <thead>
-                <tr>
-                    <th>
-                        <input type="checkbox" name="" value="">
-                    </th>
-                    <th>
-                        ID
-                    </th>
-                    <th>
-                        分类名称
-                    </th>
-                    <th>
-                        父级id
-                    </th>
-                    <th>
-                        店铺id
-                    </th>
-                    <th>
-                        是否隐藏
-                    </th>
-                    <th>
-                        加入时间
-                    </th>
-                    <th>
-                        状态
-                    </th>
-                    <th>
-                        操作
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        <input type="checkbox" value="1" name="">
-                    </td>
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        <u style="cursor:pointer" onclick="member_show('张三','member-show.html','10001','360','400')">
-                            小明
-                        </u>
-                    </td>
-                    <td>
-                        男
-                    </td>
-                    <td>
-                        admin@mail.com
-                    </td>
-                    <td>
-                        北京市 海淀区
-                    </td>
-                    <td>
-                        2017-01-01 11:11:42
-                    </td>
-                    <td class="td-status">
-<span class="layui-btn layui-btn-normal layui-btn-mini">
-已启用
-</span>
-                    </td>
-                    <td class="td-manage">
-                        <a style="text-decoration:none" onclick="member_stop(this,'10001')" href="javascript:;"
-                           title="停用">
-                            <i class="layui-icon">&#xe601;</i>
-                        </a>
-                        <a title="编辑" href="javascript:;" onclick="member_edit('编辑','member-edit.html','4','','510')"
-                           class="ml-5" style="text-decoration:none">
-                            <i class="layui-icon">&#xe642;</i>
-                        </a>
-                        <a style="text-decoration:none"
-                           onclick="member_password('修改密码','member-password.html','10001','600','400')"
-                           href="javascript:;" title="修改密码">
-                            <i class="layui-icon">&#xe631;</i>
-                        </a>
-                        <a title="删除" href="javascript:;" onclick="member_del(this,'1')"
-                           style="text-decoration:none">
-                            <i class="layui-icon">&#xe640;</i>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="checkbox" value="1" name="">
-                    </td>
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        <u style="cursor:pointer" onclick="member_show('张三','member-show.html','10001','360','400')">
-                            小明
-                        </u>
-                    </td>
-                    <td>
-                        男
-                    </td>
-                    <td>
-                        admin@mail.com
-                    </td>
-                    <td>
-                        北京市 海淀区
-                    </td>
-                    <td>
-                        2017-01-01 11:11:42
-                    </td>
-                    <td class="td-status">
-<span class="layui-btn layui-btn-normal layui-btn-mini">
-已启用
-</span>
-                    </td>
-                    <td class="td-manage">
-                        <a style="text-decoration:none" onclick="member_stop(this,'10001')" href="javascript:;"
-                           title="停用">
-                            <i class="layui-icon">&#xe601;</i>
-                        </a>
-                        <a title="编辑" href="javascript:;" onclick="member_edit('编辑','member-edit.html','4','','510')"
-                           class="ml-5" style="text-decoration:none">
-                            <i class="layui-icon">&#xe642;</i>
-                        </a>
-                        <a style="text-decoration:none"
-                           onclick="member_password('修改密码','member-password.html','10001','600','400')"
-                           href="javascript:;" title="修改密码">
-                            <i class="layui-icon">&#xe631;</i>
-                        </a>
-                        <a title="删除" href="javascript:;" onclick="member_del(this,'1')"
-                           style="text-decoration:none">
-                            <i class="layui-icon">&#xe640;</i>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <!-- 右侧内容框架，更改从这里结束 -->
-        </div>
-    </div>
-    <!-- 右侧主体结束 -->
+            </div>
+        </form>
+        <xblock id="table-block">
+            <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon">&#xe640;</i>批量删除
+            </button>
+            <button class="layui-btn" id="category_add"><i
+                    class="layui-icon">&#xe608;</i>添加分类
+            </button>
+            <span class="x-right" style="line-height:40px">共有数据：88 条</span>
+        </xblock>
+        <!-- 右侧内容框架，更改从这里结束 -->
+</div>
+</div>
+<!-- 右侧主体结束 -->
 </div>
 <!-- 中部结束 -->
 <!-- 底部开始 -->
@@ -377,67 +245,6 @@
 </div>
 <script>
 
-    layui.use(['laydate'], function () {
-        laydate = layui.laydate;//日期插件
-
-        //以上模块根据需要引入
-        //
-
-
-        var start = {
-            min: laydate.now()
-            , max: '2099-06-16 23:59:59'
-            , istoday: false
-            , choose: function (datas) {
-                end.min = datas; //开始日选好后，重置结束日的最小日期
-                end.start = datas //将结束日的初始值设定为开始日
-            }
-        };
-
-        var end = {
-            min: laydate.now()
-            , max: '2099-06-16 23:59:59'
-            , istoday: false
-            , choose: function (datas) {
-                start.max = datas; //结束日选好后，重置开始日的最大日期
-            }
-        };
-
-        document.getElementById('LAY_demorange_s').onclick = function () {
-            start.elem = this;
-            laydate(start);
-        }
-        document.getElementById('LAY_demorange_e').onclick = function () {
-            end.elem = this
-            laydate(end);
-        }
-
-    });
-
-    //批量删除提交
-    function delAll() {
-        layer.confirm('确认要删除吗？', function (index) {
-            //捉到所有被选中的，发异步进行删除
-            layer.msg('删除成功', {icon: 1});
-        });
-    }
-    // 等级-增加
-    function category_add(title, url, id, w, h) {
-        x_admin_show(title, url, w, h);
-    }
-    // 等级-编辑
-    function level_edit(title, url, id, w, h) {
-        x_admin_show(title, url, w, h);
-    }
-
-    /*等级-删除*/
-    function level_del(obj, id) {
-        layer.confirm('确认要删除吗？', function (index) {
-            //发异步删除数据
-            $(obj).parents("tr").remove();
-            layer.msg('已删除!', {icon: 1, time: 1000});
-        });
-    }
 </script>
 </body>
 </html>
