--- a/X-admin/member-add.html
+++ b/X-admin/member-add.html
@@ -67,7 +67,7 @@
                 <div class="layui-form-item">
                     <label for="L_repass" class="layui-form-label">
                     </label>
-                    <button  class="layui-btn" lay-filter="add" lay-submit="">
+                    <button  class="layui-btn" id="add-btn" lay-filter="add" lay-submit="">
                         增加
                     </button>
                 </div>
@@ -79,14 +79,17 @@
     </div>
     <!-- 中部结束 -->
     <script>
-    //百度统计可去掉
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
+        $("#add-btn").click(function () {
+            var data = [];
+            layui.use('form', function () {
+                var form = layui.form();
+                //监听提交
+                form.on('submit(add)', function (data) {
+//                    console.log(data.field)
+                    return false;
+                });
+            });
+        })
     </script>
 </body>
 </html>
